# cheatsheetrs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
.cargo/: config
.github/workflows/: rust.yml
sheets/: aws.md  cargo.md  conda.md  docker.md  gcloud.md  git.md  gsutil.md  k8s.md  markdown.md  maven.md  python.md  sed.md  swift.md  terraform.md  vim.md  xcodebuild.md
src/: lib.rs  main.rs  output.rs  sheet.rs
tests/: cli.rs
tests/expected/: first-block-output.txt  full-output.txt  list-basic-anchors.txt  list-path.txt
tests/inputs/: basic.md
