[package]
name = "cheatsheet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
termimad = "0.20"

[dev-dependencies]
assert_cmd = "2.0.10"
predicates = "3.0.2"
